# SplitWrite

./: README.md
SplitWrite-main/: Cargo.toml
SplitWrite-main/src/: aliasing.rs  lib.rs  read.rs  sync.rs  write.rs
SplitWrite-main/src/read/: factory.rs  guard.rs
SplitWrite-main/tests/: deque.rs  loom.rs
